<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textColor="#665E5E"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_mobile_number_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text=""
            android:textColor="#665E5E"
            android:textSize="14sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/inputCodeOne"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCodeTwo"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCodeThree"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCodeFour"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCodeFive"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputCodeSix"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#3F3C3C"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/didn_t_recevice_the_otp"
                android:textColor="#665E5E"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resend_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"

                android:text="@string/resend_otp"
                android:textColor="#EA0A1D"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/bv_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="70dp"
                android:background="@drawable/background_shape"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pb_verify_progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

</layout>
